Improved color visibility, fixed bugs

--- a/frontend/src/sass/abstracts/_colors.scss
+++ b/frontend/src/sass/abstracts/_colors.scss
@@ -44,7 +44,8 @@ $colors-dark: (
 	error: (
 		'400': hsl(2 97% 62%),
 		'500': hsl(2 97% 69%),
-		'hover': hsl(2 97% 62% / 46%)
+		'hover': hsl(2 97% 62% / 46%),
+		'faded': hsl(2 67% 62%)
 	)
 );
 
@@ -82,8 +83,8 @@ $colors-light: (
 	text: (
 		'400': black,
 		'accent': hsl(221 62% 19%),
-		'muted': hsl(0 0% 36%),
-		'light-muted': hsl(0 0% 85%)
+		'muted': hsl(0 0% 50%),
+		'light-muted': hsl(0 0% 80%)
 	),
 	primary: (
 		'400': hsl(215 97% 60%),
@@ -94,7 +95,11 @@ $colors-light: (
 	error: (
 		'400': hsl(2 97% 62%),
 		'500': hsl(2 97% 69%),
-		'hover': hsl(2 97% 62% / 56%)
+		'hover': hsl(2 97% 62% / 56%),
+		'faded': hsl(2 97% 62% / 68%)
+	),
+	busy: (
+		'faded': yellow
 	)
 );
 
